--- a/app/globals.css
+++ b/app/globals.css
@@ -2,20 +2,22 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
+input, textarea {
+  @apply border-2 border-gray-300 rounded-md px-1 w-full mb-2;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+input:focus, textarea:focus {
+  @apply ring-2 ring-blue-900 outline-none;
 }
 
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+h1 {
+  @apply text-blue-900 mb-2 text-xl;
+}
+
+label {
+  @apply text-blue-900
+}
+
+.btn-primary {
+  @apply bg-blue-900 text-white px-4 py-1 rounded-md;
 }
